# Console-App-Ransac-III

./: .gitignore  CMakeLists.txt  CmakePresets.json  Console-App-Ransac-III.sln  README.md  simpleTableTest.csv
.github/workflows/: cmake-single-platform.yml  run-tests.yml
Console-App-Ransac-III/: Console-App-Ransac-III.vcxproj  Console-App-Ransac-III.vcxproj.filters
Console-App-Ransac-III/docs/: doxyfile
Executable/: CMakeLists.txt  Executable.vcxproj  Executable.vcxproj.filters  output-baseline.csv
Executable/include/: Console-App-Ransac-III-main.h
Executable/src/: Console-App-Ransac-III-main.cpp
StaticLibrary/: CMakeLists.txt  IColumn.h  StaticLibrary.cpp  StaticLibrary.vcxproj  StaticLibrary.vcxproj.filters  pch.h
StaticLibrary/include/: Baseline.h  Column.h  CommandLineParser.h  Common.h  IColumn.h  ILinearModelFitStrategy.h  ITable.h  LeastSquaresFitStrategy.h  LinearModel.h  RANSACFitResult.h  RANSACFitStrategy.h  Table.h  TableBuilder.h  TableExport.h  TableFacade.h
StaticLibrary/src/: Column.cpp  CommandLineParser.cpp  Common.cpp  LeastSquaresFitStrategy.cpp  LinearModel.cpp  RANSACFitStrategy.cpp  Table.cpp  TableBuilder.cpp  TableExport.cpp  ransac_bridge.cpp
UnitTest/: CMakeLists.txt  LongRunningTests.cpp  TestOfColumn.cpp  TestOfLeastSquaresFitStrategy.cpp  TestOfRANSACFitStrategy.cpp  TestOfTable.cpp  TestOfTableBuilder.cpp  TestOfTableExport.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  testOfSimpleTable.csv
docs/: AI-context.md  AI-guided-plan.md
rust-bridge/ransac_bridge/: Cargo.toml  build.rs
rust-bridge/ransac_bridge/include/: ransac_bridge.h
rust-bridge/ransac_bridge/src/: lib.rs
tests/: CMakeLists.txt  LongRunningTests.cpp  TestOfColumn.cpp  TestOfLeastSquaresFitStrategy.cpp  TestOfRANSACFitStrategy.cpp  TestOfTable.cpp  TestOfTableBuilder.cpp  TestOfTableExport.cpp  minimal.cpp  pch.cpp  pch.h
